--- a/references.bib
+++ b/references.bib
@@ -655,6 +655,27 @@ Publisher: IAP Information Age Publishing},
 	file = {Snapshot:/Users/shawes/Zotero/storage/SJB3CXVT/2012-31006-009.html:text/html},
 }
 
+@article{lisdahl2021,
+  title={Substance use patterns in 9-10 year olds: Baseline findings from the adolescent brain cognitive development (ABCD) study},
+  author={Lisdahl, Krista M and Tapert, Susan and Sher, Kenneth J and Gonzalez, Raul and Nixon, Sara Jo and Ewing, Sarah W Feldstein and Conway, Kevin P and Wallace, Alex and Sullivan, Ryan and Hatcher, Kelah and others},
+  journal={Drug and alcohol dependence},
+  volume={227},
+  pages={108946},
+  year={2021},
+  publisher={Elsevier}
+}
+
+@article{arseneault2002,
+  title={Cannabis use in adolescence and risk for adult psychosis: longitudinal prospective study},
+  author={Arseneault, Louise and Cannon, Mary and Poulton, Richie and Murray, Robin and Caspi, Avshalom and Moffitt, Terrie E},
+  journal={Bmj},
+  volume={325},
+  number={7374},
+  pages={1212--1213},
+  year={2002},
+  publisher={British Medical Journal Publishing Group}
+}
+
 @article{castro-schilo2018,
 	title = {Using residualized change versus difference scores for longitudinal research},
 	volume = {35},
@@ -703,3 +724,211 @@ Publisher: SAGE Publications Ltd},
 	pages = {283--315},
 	file = {Farewell et al_2017_Two-Part and Related Regression Models for Longitudinal Data.pdf:/Users/shawes/Google Drive/OBSIDIAN_SWH/5_Downloads/Zotero/Zotero_Library/Farewell et al_2017_Two-Part and Related Regression Models for Longitudinal Data.pdf:application/pdf},
 }
+
+@article{bechtold2016,
+  title={Concurrent and sustained cumulative effects of adolescent marijuana use on subclinical psychotic symptoms},
+  author={Bechtold, Jordan and Hipwell, Alison and Lewis, David A and Loeber, Rolf and Pardini, Dustin},
+  journal={American Journal of Psychiatry},
+  volume={173},
+  number={8},
+  pages={781--789},
+  year={2016},
+  publisher={Am Psychiatric Assoc}
+}
+
+@article{spear2016,
+  title={Consequences of adolescent use of alcohol and other drugs: Studies using rodent models},
+  author={Spear, Linda Patia},
+  journal={Neuroscience \& Biobehavioral Reviews},
+  volume={70},
+  pages={228--243},
+  year={2016},
+  publisher={Elsevier}
+}
+
+@article{curran2012disaggregating,
+  title={Disaggregating within-person and between-person effects in multilevel and structural equation growth models.},
+  author={Curran, Patrick J and Lee, Taehun and Howard, Andrea L and Lane, Stephanie and MacCallum, Robert},
+  year={2012},
+  publisher={IAP Information Age Publishing}
+}
+
+@book{hoffman2015longitudinal,
+  title={Longitudinal analysis: Modeling within-person fluctuation and change},
+  author={Hoffman, Lesa},
+  year={2015},
+  publisher={Routledge}
+}
+
+@article{littlefield2022,
+  title={Limitations of cross-lagged panel models in addiction research and alternative models: An empirical example using project MATCH.},
+  author={Littlefield, Andrew K and King, Kevin M and Acuff, Samuel F and Foster, Katherine T and Murphy, James G and Witkiewitz, Katie},
+  journal={Psychology of Addictive Behaviors},
+  volume={36},
+  number={3},
+  pages={271},
+  year={2022},
+  publisher={American Psychological Association}
+}
+
+@article{bauer2019,
+  title={Conducting Longitudinal Data Analysis: Knowing What to Do and Learning How to Do It.},
+  author={Bauer, D. J. and Curran, P. J.},
+  meeting={Society for Research on Child Development},
+  year={2019}
+}
+
+@article{kisbu2013,
+  title={A Monte Carlo comparison study of the power of the analysis of covariance, simple difference, and residual change scores in testing two-wave data},
+  author={Kisbu-Sakarya, Yasemin and MacKinnon, David P and Aiken, Leona S},
+  journal={Educational and Psychological Measurement},
+  volume={73},
+  number={1},
+  pages={47--62},
+  year={2013},
+  publisher={SAGE Publications Sage CA: Los Angeles, CA}
+}
+
+@article{collins2006,
+  title={Analysis of longitudinal data: The integration of theoretical model, temporal design, and statistical model},
+  author={Collins, Linda M},
+  journal={Annu. Rev. Psychol.},
+  volume={57},
+  pages={505--528},
+  year={2006},
+  publisher={Annual Reviews}
+}
+
+@article{hasan2020,
+  title={Cannabis use and psychosis: a review of reviews},
+  author={Hasan, Alkomiet and von Keller, Rupert and Friemel, Chris Maria and Hall, Wayne and Schneider, Miriam and Koethe, Dagmar and Leweke, F Markus and Strube, Wolfgang and Hoch, Eva},
+  journal={European archives of psychiatry and clinical neuroscience},
+  volume={270},
+  pages={403--412},
+  year={2020},
+  publisher={Springer}
+}
+
+@article{crews2000,
+  title={Binge ethanol consumption causes differential brain damage in young adolescent rats compared with adult rats},
+  author={Crews, Fulton T and Braun, Christopher J and Hoplight, Blair and Switzer III, Robert C and Knapp, Darin J},
+  journal={Alcoholism: Clinical and Experimental Research},
+  volume={24},
+  number={11},
+  pages={1712--1723},
+  year={2000},
+  publisher={Wiley Online Library}
+}
+
+@article{ji2018,
+  title={Binge alcohol exposure causes neurobehavioral deficits and GSK3$\beta$ activation in the hippocampus of adolescent rats},
+  author={Ji, Zhe and Yuan, Lin and Lu, Xiong and Ding, Hanqing and Luo, Jia and Ke, Zun-Ji},
+  journal={Scientific Reports},
+  volume={8},
+  number={1},
+  pages={3088},
+  year={2018},
+  publisher={Nature Publishing Group UK London}
+}
+
+@article{semple2005,
+  title={Cannabis as a risk factor for psychosis: systematic review},
+  author={Semple, David M and McIntosh, Andrew M and Lawrie, Stephen M},
+  journal={Journal of psychopharmacology},
+  volume={19},
+  number={2},
+  pages={187--194},
+  year={2005},
+  publisher={Sage Publications Sage CA: Thousand Oaks, CA}
+}
+
+@article{schulenberg2019,
+  title={Substance use in the context of adolescent development.},
+  author={Schulenberg, John and Maslowsky, Julie and Patrick, Megan E and Martz, Meghan},
+  year={2019},
+  publisher={Oxford University Press}
+}
+
+@article{moffitt2015,
+  title={Life-course-persistent versus adolescence-limited antisocial behavior},
+  author={Moffitt, Terrie E},
+  journal={Developmental Psychopathology: Volume Three: Risk, Disorder, and Adaptation},
+  pages={570--598},
+  year={2015},
+  publisher={Wiley Online Library}
+}
+
+@article{masten2005,
+  title={Developmental cascades: linking academic achievement and externalizing and internalizing symptoms over 20 years.},
+  author={Masten, Ann S and Roisman, Glenn I and Long, Jeffrey D and Burt, Keith B and Obradovi{\'c}, Jelena and Riley, Jennifer R and Boelcke-Stennes, Kristen and Tellegen, Auke},
+  journal={Developmental psychology},
+  volume={41},
+  number={5},
+  pages={733},
+  year={2005},
+  publisher={American Psychological Association}
+}
+
+@article{rogosch2010,
+  title={From child maltreatment to adolescent cannabis abuse and dependence: A developmental cascade model},
+  author={Rogosch, Fred A and Oshri, Assaf and Cicchetti, Dante},
+  journal={Development and psychopathology},
+  volume={22},
+  number={4},
+  pages={883--897},
+  year={2010},
+  publisher={Cambridge University Press}
+}
+
+@article{ewing2022,
+  title={Measuring retention within the adolescent brain cognitive development (ABCD) SM study},
+  author={Ewing, Sarah W Feldstein and Dash, Genevieve F and Thompson, Wesley K and Reuter, Chase and Diaz, Vanessa G and Anokhin, Andrey and Chang, Linda and Cottler, Linda B and Dowling, Gayathri J and LeBlanc, Kimberly and others},
+  journal={Developmental Cognitive Neuroscience},
+  volume={54},
+  pages={101081},
+  year={2022},
+  publisher={Elsevier}
+}
+
+@article{willoughby2012,
+  title={Executive function in early childhood: longitudinal measurement invariance and developmental change.},
+  author={Willoughby, Michael T and Wirth, RJ and Blair, Clancy B},
+  journal={Psychological assessment},
+  volume={24},
+  number={2},
+  pages={418},
+  year={2012},
+  publisher={American Psychological Association}
+}
+
+@misc{van2015,
+  title={Measurement invariance},
+  author={Van De Schoot, Rens and Schmidt, Peter and De Beuckelaer, Alain and Lek, Kimberley and Zondervan-Zwijnenburg, Marielle},
+  journal={Frontiers in psychology},
+  volume={6},
+  pages={1064},
+  year={2015},
+  publisher={Frontiers Media SA}
+}
+
+@article{liu2017,
+  title={Testing measurement invariance in longitudinal data with ordered-categorical measures.},
+  author={Liu, Yu and Millsap, Roger E and West, Stephen G and Tein, Jenn-Yun and Tanaka, Rika and Grimm, Kevin J},
+  journal={Psychological methods},
+  volume={22},
+  number={3},
+  pages={486},
+  year={2017},
+  publisher={American Psychological Association}
+}
+
+
+
+
+
+
+
+
+
+
+
